完成整个流程
